--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link rel="stylesheet" href="/path/to/flickity.css" media="screen">
+    <!-- <link rel="stylesheet" href="/path/to/flickity.css" media="screen"> -->
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
@@ -43,6 +44,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="/path/to/flickity.pkgd.min.js"></script>
+    <!-- <script src="/path/to/flickity.pkgd.min.js"></script>
+     -->
+     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   </body>
 </html>
